[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemies/Bat.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://graphics/GRP/tileset_wall.tres" type="TileSet" id=5]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://tiles/InstructionLabel.tscn" type="PackedScene" id=7]

[node name="Level 2" type="Node"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 1, 3 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 67, 67 )
collision_mask = 6
format = 1
tile_data = PoolIntArray( 131076, -536870891, 0, 131078, -1073741803, 0, 131079, 21, 0, 131080, 21, 0, 131081, 21, 0, 131082, 21, 0, 131083, 21, 0, 131084, 21, 0, 131085, 21, 0, 131086, 21, 0, 131087, 21, 0, 131088, 21, 0, 262140, -1610612715, 0, 196611, 21, 0, 196612, -536870891, 0, 196614, -1073741803, 0, 327676, -1610612715, 0, 262146, 21, 0, 262148, -536870891, 0, 262150, -1073741803, 0, 262161, 21, 0, 393212, -1610612715, 0, 327681, 21, 0, 327684, -536870891, 0, 327686, -1073741803, 0, 458748, -1610612715, 0, 393216, 21, 0, 393220, -536870891, 0, 393234, 21, 0, 393240, 21, 0, 393241, 21, 0, 393242, 21, 0, 393243, 21, 0, 393244, 21, 0, 393245, 21, 0, 524284, -1610612715, 0, 458756, -536870891, 0, 589820, 21, 0, 589821, 21, 0, 589822, 21, 0, 524292, -536870891, 0, 524294, -1073741803, 0, 524295, 21, 0, 524296, 21, 0, 524297, 21, 0, 524298, 21, 0, 524299, 21, 0, 524307, 21, 0, 524308, 21, 0, 524309, 21, 0, 524310, 21, 0, 524311, 21, 0, 655359, 21, 0, 589828, -536870891, 0, 589830, -1073741803, 0, 589841, 21, 0, 655360, 21, 0, 655364, -536870891, 0, 655366, -1073741803, 0, 655376, 21, 0, 655384, 21, 0, 655385, 21, 0, 655386, 21, 0, 655387, 21, 0, 655388, 21, 0, 655389, 21, 0, 655390, 21, 0, 655391, 21, 0, 655392, 21, 0, 655393, 21, 0, 720897, 21, 0, 720902, -2147483627, 0, 720911, 21, 0, 786433, -1610612715, 0, 786438, -2147483627, 0, 786446, 21, 0, 786470, -1073741803, 0, 851969, 21, 0, 851970, 21, 0, 851971, 21, 0, 851972, -1610612715, 0, 851974, -2147483627, 0, 852006, -1073741803, 0, 917508, -1610612715, 0, 917510, -2147483627, 0, 917516, 21, 0, 917542, -1073741803, 0, 983044, -1610612715, 0, 983046, -2147483627, 0, 983051, 21, 0, 983053, 21, 0, 983059, -1073741803, 0, 983060, 21, 0, 983061, 21, 0, 983062, 21, 0, 983063, 21, 0, 983064, 21, 0, 983065, 21, 0, 983066, 21, 0, 983067, 21, 0, 983068, 21, 0, 983069, 21, 0, 983070, 21, 0, 983071, 21, 0, 983072, 21, 0, 983073, 21, 0, 983074, 21, 0, 983078, -1073741803, 0, 1048580, -1610612715, 0, 1048586, 21, 0, 1048591, 21, 0, 1048595, -1073741803, 0, 1048614, -1073741803, 0, 1114116, -1610612715, 0, 1114121, 21, 0, 1114128, 21, 0, 1114148, 21, 0, 1114149, 21, 0, 1179652, -1610612715, 0, 1179653, 21, 0, 1179654, 21, 0, 1179655, 21, 0, 1179656, 21, 0, 1179665, -1610612715, 0, 1179683, 21, 0, 1245201, -1610612715, 0, 1245203, 21, 0, 1245204, 21, 0, 1245205, 21, 0, 1245206, 21, 0, 1245207, 21, 0, 1245208, 21, 0, 1245209, 21, 0, 1245218, 21, 0, 1310737, -1610612715, 0, 1310753, 21, 0, 1376273, -1610612715, 0, 1376288, 21, 0, 1441809, -1610612715, 0, 1441811, 21, 0, 1441823, 21, 0, 1507345, -1610612715, 0, 1507348, -1610612715, 0, 1507358, 21, 0, 1572881, -1610612715, 0, 1572884, -1610612715, 0, 1572893, 21, 0, 1638420, -1610612715, 0, 1638428, 21, 0, 1769371, 21, 0, 1769372, 21, 0, 1703956, -1610612715, 0, 1703963, 21, 0, 1769474, 21, 0, 1769475, 21, 0, 1769476, 21, 0, 1769477, 21, 0, 1769478, 21, 0, 1769479, 21, 0, 1769480, 21, 0, 1769481, 21, 0, 1769482, 21, 0, 1769483, 21, 0, 1769484, 21, 0, 1769485, 21, 0, 1769486, 21, 0, 1769487, 21, 0, 1769488, 21, 0, 1769489, 21, 0, 1769490, 21, 0, 1769491, 21, 0, 1769492, 21, 0, 1769493, 21, 0, 1769494, 21, 0, 1769495, 21, 0, 1769496, 21, 0, 1769497, 21, 0, 1769498, 21, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 360, 100 )
has_gun = true

[node name="Enemies" type="Node" parent="."]

[node name="Bat" parent="Enemies" instance=ExtResource( 1 )]

[node name="Bat2" parent="Enemies" instance=ExtResource( 1 )]
position = Vector2( 2128, 601 )

[node name="Bat3" parent="Enemies" instance=ExtResource( 1 )]
position = Vector2( 878, 1308 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 6 )]

[node name="InstructionLabel" parent="." instance=ExtResource( 7 )]
position = Vector2( 366, 1171 )
text = "press space to shoot"

[connection signal="coins_changed" from="." to="CanvasLayer/HUD" method="_on_Main_coins_changed"]
[connection signal="keys_changed" from="." to="CanvasLayer/HUD" method="_on_Main_keys_changed"]
[connection signal="score_changed" from="." to="CanvasLayer/HUD" method="_on_Main_score_changed"]
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="life_changed" from="Player" to="CanvasLayer/HUD" method="_on_Player_life_changed"]
